// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCard should match snapshot if type is confirm 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookCard
    id="ZI3gAQAACAAJ"
    type="confirm"
    volumeInfo={
      Object {
        "authors": Array [
          "Paulo Coelho",
        ],
        "description": "A special...",
        "imageLinks": Object {
          "smallThumbnail": "link",
          "thumbnail": "link",
        },
        "title": "The Alchemist",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <button
          className="confirm-btn"
          onClick={[Function]}
        >
          Confirm
        </button>
        <img
          alt="The Alchemist"
          src="link"
        />
        <h3>
          The Alchemist
        </h3>
        <h4>
          Paulo Coelho
        </h4>
        <p>
          A special...
        </p>
      </div>,
      "className": "card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="confirm-btn"
            onClick={[Function]}
          >
            Confirm
          </button>,
          <img
            alt="The Alchemist"
            src="link"
          />,
          <h3>
            The Alchemist
          </h3>,
          <h4>
            Paulo Coelho
          </h4>,
          <p>
            A special...
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Confirm",
            "className": "confirm-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Confirm",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "The Alchemist",
            "src": "link",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "The Alchemist",
          },
          "ref": null,
          "rendered": "The Alchemist",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Paulo Coelho",
          },
          "ref": null,
          "rendered": "Paulo Coelho",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "A special...",
          },
          "ref": null,
          "rendered": "A special...",
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <button
            className="confirm-btn"
            onClick={[Function]}
          >
            Confirm
          </button>
          <img
            alt="The Alchemist"
            src="link"
          />
          <h3>
            The Alchemist
          </h3>
          <h4>
            Paulo Coelho
          </h4>
          <p>
            A special...
          </p>
        </div>,
        "className": "card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              className="confirm-btn"
              onClick={[Function]}
            >
              Confirm
            </button>,
            <img
              alt="The Alchemist"
              src="link"
            />,
            <h3>
              The Alchemist
            </h3>,
            <h4>
              Paulo Coelho
            </h4>,
            <p>
              A special...
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Confirm",
              "className": "confirm-btn",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Confirm",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "The Alchemist",
              "src": "link",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "The Alchemist",
            },
            "ref": null,
            "rendered": "The Alchemist",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Paulo Coelho",
            },
            "ref": null,
            "rendered": "Paulo Coelho",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "A special...",
            },
            "ref": null,
            "rendered": "A special...",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BookCard should match snapshot if type is recommendations 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookCard
    Name="Brida"
    Type="book"
    type="recommendations"
    wTeaser="Paulo Coelho..."
    wUrl="http://en.wikipedia.org/wiki/Brida_(novel)"
    yID={null}
    yUrl={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <h3
          className="rec-title"
        >
          Brida
        </h3>
        <p>
          Paulo Coelho...
        </p>
      </div>,
      "className": "card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="rec-title"
          >
            Brida
          </h3>,
          <p>
            Paulo Coelho...
          </p>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Brida",
            "className": "rec-title",
          },
          "ref": null,
          "rendered": "Brida",
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Paulo Coelho...",
          },
          "ref": null,
          "rendered": "Paulo Coelho...",
          "type": "p",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <h3
            className="rec-title"
          >
            Brida
          </h3>
          <p>
            Paulo Coelho...
          </p>
        </div>,
        "className": "card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="rec-title"
            >
              Brida
            </h3>,
            <p>
              Paulo Coelho...
            </p>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Brida",
              "className": "rec-title",
            },
            "ref": null,
            "rendered": "Brida",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Paulo Coelho...",
            },
            "ref": null,
            "rendered": "Paulo Coelho...",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
